src/styles/swipers.css
#root {
  height: 100%;
}
html,
body {
  position: relative;
  height: 100%;
}

body {
  background: #f5f8fa;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 14px;
  color: #000;
  margin: 0;
  padding: 0;
}

.swiper-container {
  width: 100%;
  height: 350px;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  background: #f5f8fa;

  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}

.swiper-slide img {
  display: block;
  width: 300%;
  height: 100%;
  object-fit: cover;
}

/* .swiper-navigation-color {
  background-color: white;
} */

.swiper-button-next {
  width: 3.75rem;
  height: 3.75rem;
  color: #ffba08;
}

.swiper-button-prev {
  width: 3.75rem;
  height: 3.75rem;
  color: #ffba08;
}

.swiper-pagination-bullet {
  width: 0.75rem;
  height: 0.75rem;
  background: #999999;
}

.swiper-pagination-bullet-active {
  background: #ffba08;
}

